Bug 1936952 - fix(gtk): Prevent nsColorPicker from opening in headless mode. r=bytesized

This patch ensures that the GTK-based color picker does not
attempt to open when running in headless mode. It prevents
unnecessary crashes when tests run without a display environment.

Differential Revision: https://phabricator.services.mozilla.com/D232321